<resources>
    <string name="app_name">Mv_Series</string>
    <string name="recomendations">Recomendations</string>
    <string name="textview1">TextView</string>
    <string name="movieimage">movieimage</string>
    <string name="movie_cover">movie_cover</string>
    <string name="textview2">TextView</string>
    <string name="textview3">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
        officia deserunt mollit anim id est laborum.</string>
    <string name="Cast">cast</string>
    <string name="popular_this_week">Popular This Week</string>
</resources>
