<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.MovieDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detail_movie_cover"
            android:layout_width="wrap_content"
            android:layout_height="245dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/movie_cover"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic[0]" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/play_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
            app:layout_constraintEnd_toEndOf="@+id/detail_movie_cover"
            app:layout_constraintStart_toStartOf="@+id/detail_movie_cover"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_play_arrow"
            android:focusable="true" />

        <ImageView
            android:id="@+id/detail_movie_img"
            android:layout_width="125dp"
            android:layout_height="175dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/movieimage"
            android:scaleType="centerCrop"
            android:transitionName="sharedName"
            app:layout_constraintBottom_toBottomOf="@id/detail_movie_cover"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_movie_cover"
            app:srcCompat="@drawable/aladin"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/detail_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/textview2"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_img"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover" />

        <TextView
            android:lineSpacingExtra="8dp"
            android:id="@+id/detail_movie_descr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/textview3"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_img" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/text_bg_blue"
            android:padding="16dp"
            android:text="@string/Cast"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_descr"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cast"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>